# TestTaskNoxer

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
src/: .example_env  main_app.py
src/core/: config.py
src/core/database/: base.py  db_helper.py
src/core/utils/: add_values.py
src/core/utils/sync/: main.py
src/core/utils/sync/core/: api_client.py  database.py
src/core/utils/sync/services/: __init__.py  categories.py  product_marks.py  product_relations.py  products.py  special_actions.py  special_badges.py  special_json_configs.py  special_parameters.py
src/core/utils/sync/utils/: errors.py  logging.py
